argocd/manifests/ntfy/base/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: ntfy
  namespace: ntfy
  labels:
    app: ntfy
    app.kubernetes.io/name: ntfy
spec:
  type: ClusterIP
  selector:
    app: ntfy
  ports:
    - name: http
      port: 80
      targetPort: 80
      protocol: TCP
